argocd/internal/qdrant/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qdrant
  namespace: ai
spec:
  selector:
    app: qdrant
  ports:
    - name: http
      port: 6333
      targetPort: 6333
    - name: grpc
      port: 6334
      targetPort: 6334
