argocd/internal/qdrant/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: qdrant-virtualservice
  namespace: ai
spec:
  hosts:
    - qdrant.willyhu.tw
  gateways:
    - qdrant-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: qdrant
            port:
              number: 6333
